chore: 현재 프로젝트 상태 전체 반영 (한글화 진행 포함)

--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -7,6 +7,8 @@
     "id": "view-in-github"
    },
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/02_pytorch_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/02_pytorch_classification.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/02_pytorch_classification.pdf) | [Watch Video Walkthrough](https://youtu.be/Z_ikDlimN6A?t=30691) "
@@ -18,29 +20,29 @@
     "id": "r8C1WSzsHC7x"
    },
    "source": [
-    "# 02. PyTorch Neural Network Classification\n",
+    "# 02. PyTorch 신경망 분류\n",
     "\n",
-    "## What is a classification problem?\n",
+    "## 분류 문제란 무엇인가?\n",
     "\n",
-    "A [classification problem](https://en.wikipedia.org/wiki/Statistical_classification) involves predicting whether something is one thing or another.\n",
+    "[분류 문제](https://en.wikipedia.org/wiki/Statistical_classification)는 어떤 것이 하나의 것인지 다른 것인지를 예측하는 것을 포함합니다.\n",
     "\n",
-    "For example, you might want to:\n",
+    "예를 들어, 다음과 같은 것들을 원할 수 있습니다:\n",
     "\n",
-    "| Problem type | What is it? | Example |\n",
+    "| 문제 유형 | 무엇인가? | 예시 |\n",
     "| ----- | ----- | ----- |\n",
-    "| **Binary classification** | Target can be one of two options, e.g. yes or no | Predict whether or not someone has heart disease based on their health parameters. |\n",
-    "| **Multi-class classification** | Target can be one of more than two options | Decide whether a photo is of food, a person or a dog. |\n",
-    "| **Multi-label classification** | Target can be assigned more than one option | Predict what categories should be assigned to a Wikipedia article (e.g. mathematics, science & philosophy). |\n",
+    "| **이진 분류** | 타겟이 두 옵션 중 하나일 수 있음, 예: 예 또는 아니오 | 건강 매개변수를 기반으로 누군가가 심장병을 가지고 있는지 예측. |\n",
+    "| **다중 클래스 분류** | 타겟이 두 개 이상의 옵션 중 하나일 수 있음 | 사진이 음식, 사람 또는 개인지 결정. |\n",
+    "| **다중 레이블 분류** | 타겟에 하나 이상의 옵션이 할당될 수 있음 | Wikipedia 기사에 어떤 카테고리가 할당되어야 하는지 예측 (예: 수학, 과학 및 철학). |\n",
     "\n",
     "<div align=\"center\">\n",
     "<img src=\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/02-different-classification-problems.png\" alt=\"various different classification in machine learning such as binary classification, multiclass classification and multilabel classification\" width=900/>\n",
     "</div>\n",
     "    \n",
-    "Classification, along with regression (predicting a number, covered in [notebook 01](https://www.learnpytorch.io/01_pytorch_workflow/)) is one of the most common types of machine learning problems.\n",
+    "분류는 회귀(숫자 예측, [노트북 01](https://www.learnpytorch.io/01_pytorch_workflow/)에서 다룸)와 함께 가장 일반적인 머신러닝 문제 유형 중 하나입니다.\n",
     "\n",
-    "In this notebook, we're going to work through a couple of different classification problems with PyTorch. \n",
+    "이 노트북에서는 PyTorch로 몇 가지 다른 분류 문제를 다룰 것입니다.\n",
     "\n",
-    "In other words, taking a set of inputs and predicting what class those set of inputs belong to.\n",
+    "즉, 입력 세트를 가져와서 그 입력 세트가 어떤 클래스에 속하는지 예측하는 것입니다.\n",
     "\n",
     "\n"
    ]
