--- a/03_pytorch_computer_vision.ipynb
+++ b/03_pytorch_computer_vision.ipynb
@@ -7,6 +7,8 @@
     "id": "c2dc16c4-c7f4-4945-ba91-6430a51e6f5a"
    },
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/03_pytorch_computer_vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/03_pytorch_computer_vision.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/03_pytorch_computer_vision.pdf) | [Watch Video Walkthrough](https://youtu.be/Z_ikDlimN6A?t=50417) "
@@ -19,20 +21,20 @@
     "id": "08f47c6a-3318-4e3f-8bb3-c520e00e63dd"
    },
    "source": [
-    "# 03. PyTorch Computer Vision\n",
+    "# 03. PyTorch 컴퓨터 비전\n",
     "\n",
-    "[Computer vision](https://en.wikipedia.org/wiki/Computer_vision) is the art of teaching a computer to see.\n",
+    "[컴퓨터 비전](https://en.wikipedia.org/wiki/Computer_vision)은 컴퓨터에게 보는 법을 가르치는 기술입니다.\n",
     "\n",
-    "For example, it could involve building a model to classify whether a photo is of a cat or a dog ([binary classification](https://developers.google.com/machine-learning/glossary#binary-classification)).\n",
+    "예를 들어, 사진이 고양이인지 개인지 분류하는 모델을 구축하는 것([이진 분류](https://developers.google.com/machine-learning/glossary#binary-classification))을 포함할 수 있습니다.\n",
     "\n",
-    "Or whether a photo is of a cat, dog or chicken ([multi-class classification](https://developers.google.com/machine-learning/glossary#multi-class-classification)).\n",
+    "또는 사진이 고양이, 개 또는 닭인지([다중 클래스 분류](https://developers.google.com/machine-learning/glossary#multi-class-classification)).\n",
     "\n",
-    "Or identifying where a car appears in a video frame ([object detection](https://en.wikipedia.org/wiki/Object_detection)).\n",
+    "또는 비디오 프레임에서 자동차가 어디에 나타나는지 식별하는 것([객체 감지](https://en.wikipedia.org/wiki/Object_detection)).\n",
     "\n",
-    "Or figuring out where different objects in an image can be separated ([panoptic segmentation](https://arxiv.org/abs/1801.00868)).\n",
+    "또는 이미지에서 서로 다른 객체들이 어디서 분리될 수 있는지 파악하는 것([파노픽 분할](https://arxiv.org/abs/1801.00868)).\n",
     "\n",
     "![example computer vision problems](https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/03-computer-vision-problems.png)\n",
-    "*Example computer vision problems for binary classification, multiclass classification, object detection and segmentation.*"
+    "*이진 분류, 다중 클래스 분류, 객체 감지 및 분할을 위한 예시 컴퓨터 비전 문제들.*"
    ]
   },
   {
