--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/04_pytorch_custom_datasets.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/04_pytorch_custom_datasets.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/04_pytorch_custom_datasets.pdf) | [Watch Video Walkthrough](https://youtu.be/Z_ikDlimN6A?t=71010) "
@@ -13,28 +15,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 04. PyTorch Custom Datasets\n",
+    "# 04. PyTorch 사용자 정의 데이터셋\n",
     "\n",
-    "In the last notebook, [notebook 03](https://www.learnpytorch.io/03_pytorch_computer_vision/), we looked at how to build computer vision models on an in-built dataset in PyTorch (FashionMNIST).\n",
+    "이전 노트북인 [노트북 03](https://www.learnpytorch.io/03_pytorch_computer_vision/)에서 PyTorch의 내장 데이터셋(FashionMNIST)에서 컴퓨터 비전 모델을 구축하는 방법을 살펴보았습니다.\n",
     "\n",
-    "The steps we took are similar across many different problems in machine learning.\n",
+    "우리가 취한 단계들은 머신러닝의 많은 다른 문제들에서 유사합니다.\n",
     "\n",
-    "Find a dataset, turn the dataset into numbers, build a model (or find an existing model) to find patterns in those numbers that can be used for prediction.\n",
+    "데이터셋을 찾고, 데이터셋을 숫자로 변환하고, 예측에 사용할 수 있는 그 숫자들의 패턴을 찾기 위한 모델을 구축(또는 기존 모델을 찾기)합니다.\n",
     "\n",
-    "PyTorch has many built-in datasets used for a wide number of machine learning benchmarks, however, you'll often want to use your own **custom dataset**."
+    "PyTorch는 다양한 머신러닝 벤치마크에 사용되는 많은 내장 데이터셋을 가지고 있지만, 종종 자신만의 **사용자 정의 데이터셋**을 사용하고 싶을 것입니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is a custom dataset?\n",
+    "## 사용자 정의 데이터셋이란 무엇인가?\n",
     "\n",
-    "A **custom dataset** is a collection of data relating to a specific problem you're working on.\n",
+    "**사용자 정의 데이터셋**은 작업 중인 특정 문제와 관련된 데이터의 모음입니다.\n",
     "\n",
-    "In essence, a **custom dataset** can be comprised of almost anything.\n",
+    "본질적으로, **사용자 정의 데이터셋**은 거의 모든 것으로 구성될 수 있습니다.\n",
     "\n",
-    "For example, if we were building a food image classification app like [Nutrify](https://nutrify.app), our custom dataset might be images of food.\n",
+    "예를 들어, [Nutrify](https://nutrify.app)와 같은 음식 이미지 분류 앱을 구축한다면, 우리의 사용자 정의 데이터셋은 음식 이미지일 수 있습니다.\n",
     "\n",
     "Or if we were trying to build a model to classify whether or not a text-based review on a website was positive or negative, our custom dataset might be examples of existing customer reviews and their ratings.\n",
     "\n",
