--- a/06_pytorch_transfer_learning.ipynb
+++ b/06_pytorch_transfer_learning.ipynb
@@ -5,6 +5,8 @@
    "id": "39355618-53c2-4f68-b6b2-076e0caa727e",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/06_pytorch_transfer_learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/06_pytorch_transfer_learning.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/06_pytorch_transfer_learning.pdf) "
@@ -15,19 +17,19 @@
    "id": "a283a60e-4ee4-4a02-a998-ca942a4d3e0d",
    "metadata": {},
    "source": [
-    "# 06. PyTorch Transfer Learning\n",
+    "# 06. PyTorch 전이 학습\n",
     "\n",
-    "> **Note:** This notebook uses `torchvision`'s new [multi-weight support API (available in `torchvision` v0.13+)](https://pytorch.org/blog/introducing-torchvision-new-multi-weight-support-api/).\n",
+    "> **참고:** 이 노트북은 `torchvision`의 새로운 [다중 가중치 지원 API (`torchvision` v0.13+에서 사용 가능)](https://pytorch.org/blog/introducing-torchvision-new-multi-weight-support-api/)를 사용합니다.\n",
     "\n",
-    "We've built a few models by hand so far.\n",
+    "지금까지 몇 개의 모델을 수동으로 구축했습니다.\n",
     "\n",
-    "But their performance has been poor.\n",
+    "하지만 성능이 좋지 않았습니다.\n",
     "\n",
-    "You might be thinking, **is there a well-performing model that already exists for our problem?**\n",
+    "**우리 문제에 대해 이미 잘 작동하는 모델이 있을까?**라고 생각할 수 있습니다.\n",
     "\n",
-    "And in the world of deep learning, the answer is often *yes*.\n",
+    "딥러닝의 세계에서는 답이 종종 *예*입니다.\n",
     "\n",
-    "We'll see how by using a powerful technique called [**transfer learning**](https://developers.google.com/machine-learning/glossary#transfer-learning)."
+    "[**전이 학습**](https://developers.google.com/machine-learning/glossary#transfer-learning)이라는 강력한 기법을 사용하여 어떻게 할 수 있는지 살펴보겠습니다."
    ]
   },
   {
@@ -35,9 +37,9 @@
    "id": "bce1d5c7-8cb9-4f7f-8402-58f419ae9176",
    "metadata": {},
    "source": [
-    "## What is transfer learning?\n",
+    "## 전이 학습이란 무엇인가?\n",
     "\n",
-    "**Transfer learning** allows us to take the patterns (also called weights) another model has learned from another problem and use them for our own problem.\n",
+    "**전이 학습**은 다른 모델이 다른 문제에서 학습한 패턴(가중치라고도 함)을 가져와서 우리 자신의 문제에 사용할 수 있게 해줍니다.\n",
     "\n",
     "For example, we can take the patterns a computer vision model has learned from datasets such as [ImageNet](https://www.image-net.org/) (millions of images of different objects) and use them to power our FoodVision Mini model.\n",
     "\n",
