--- a/07_pytorch_experiment_tracking.ipynb
+++ b/07_pytorch_experiment_tracking.ipynb
@@ -5,6 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/07_pytorch_experiment_tracking.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/07_pytorch_experiment_tracking.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/07_pytorch_experiment_tracking.pdf) "
@@ -15,25 +17,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 07. PyTorch Experiment Tracking\n",
+    "# 07. PyTorch 실험 추적\n",
     "\n",
-    "> **Note:** This notebook uses `torchvision`'s new [multi-weight support API (available in `torchvision` v0.13+)](https://pytorch.org/blog/introducing-torchvision-new-multi-weight-support-api/). \n",
+    "> **참고:** 이 노트북은 `torchvision`의 새로운 [다중 가중치 지원 API (`torchvision` v0.13+에서 사용 가능)](https://pytorch.org/blog/introducing-torchvision-new-multi-weight-support-api/)를 사용합니다.\n",
     "\n",
-    "We've trained a fair few models now on the journey to making FoodVision Mini (an image classification model to classify images of pizza, steak or sushi).\n",
+    "FoodVision Mini(피자, 스테이크 또는 초밥 이미지를 분류하는 이미지 분류 모델)를 만드는 과정에서 지금까지 꽤 많은 모델을 훈련했습니다.\n",
     "\n",
-    "And so far we've kept track of them via Python dictionaries.\n",
+    "그리고 지금까지는 Python 딕셔너리를 통해 추적했습니다.\n",
     "\n",
-    "Or just comparing them by the metric print outs during training.\n",
+    "또는 훈련 중 메트릭 출력을 비교하는 것만으로도요.\n",
     "\n",
-    "What if you wanted to run a dozen (or more) different models at once?\n",
+    "한 번에 12개(또는 그 이상)의 다른 모델을 실행하고 싶다면 어떨까요?\n",
     "\n",
-    "Surely there's a better way...\n",
+    "분명히 더 나은 방법이 있을 것입니다...\n",
     "\n",
-    "There is.\n",
+    "있습니다.\n",
     "\n",
-    "**Experiment tracking.**\n",
+    "**실험 추적.**\n",
     "\n",
-    "And since experiment tracking is so important and integral to machine learning, you can consider this notebook your first milestone project.\n",
+    "그리고 실험 추적이 머신러닝에 매우 중요하고 필수적이므로, 이 노트북을 첫 번째 마일스톤 프로젝트로 생각할 수 있습니다.\n",
     "\n",
     "So welcome to Milestone Project 1: FoodVision Mini Experiment Tracking.\n",
     "\n",
