--- a/08_pytorch_paper_replicating.ipynb
+++ b/08_pytorch_paper_replicating.ipynb
@@ -7,6 +7,8 @@
         "id": "e7e81227-aa0c-4e15-9ac4-20cc7128c915"
       },
       "source": [
+        "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+        "\n",
         "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/08_pytorch_paper_replicating.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
         "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/08_pytorch_paper_replicating.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/08_pytorch_paper_replicating.pdf)"
@@ -20,17 +22,17 @@
         "tags": []
       },
       "source": [
-        "# 08. PyTorch Paper Replicating\n",
+        "# 08. PyTorch 논문 재현\n",
         "\n",
-        "Welcome to Milestone Project 2: PyTorch Paper Replicating!\n",
+        "마일스톤 프로젝트 2: PyTorch 논문 재현에 오신 것을 환영합니다!\n",
         "\n",
-        "In this project, we're going to be **replicating a machine learning research paper** and creating a Vision Transformer (ViT) from scratch using PyTorch.\n",
+        "이 프로젝트에서는 **머신러닝 연구 논문을 재현**하고 PyTorch를 사용하여 Vision Transformer (ViT)를 처음부터 생성할 것입니다.\n",
         "\n",
-        "We'll then see how ViT, a state-of-the-art computer vision architecture, performs on our FoodVision Mini problem.\n",
+        "그런 다음 최첨단 컴퓨터 비전 아키텍처인 ViT가 우리의 FoodVision Mini 문제에서 어떻게 작동하는지 살펴보겠습니다.\n",
         "\n",
         "<img src=\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/08-vit-paper-applying-vit-to-food-vision-mini.png\" alt=\"appyling the vision transformer architecture to FoodVision mini\" width=900/>\n",
         "\n",
-        "*For Milestone Project 2 we're going to focus on recreating the Vision Transformer (ViT) computer vision architecture and applying it to our FoodVision Mini problem to classify different images of pizza, steak and sushi.*"
+        "*마일스톤 프로젝트 2에서는 Vision Transformer (ViT) 컴퓨터 비전 아키텍처를 재생성하고 피자, 스테이크, 초밥의 다양한 이미지를 분류하기 위해 FoodVision Mini 문제에 적용하는 데 집중할 것입니다.*"
       ]
     },
     {
@@ -40,11 +42,11 @@
         "id": "ccb53b99-277c-4ac0-a1fb-283c47576be1"
       },
       "source": [
-        "## What is paper replicating?\n",
+        "## 논문 재현이란 무엇인가?\n",
         "\n",
-        "It's no secret machine learning is advancing fast.\n",
+        "머신러닝이 빠르게 발전하고 있다는 것은 비밀이 아닙니다.\n",
         "\n",
-        "Many of these advances get published in machine learning research papers.\n",
+        "이러한 발전의 많은 부분이 머신러닝 연구 논문에 발표됩니다.\n",
         "\n",
         "And the goal of **paper replicating** is to replicate these advances with code so you can use the techniques for your own problem.\n",
         "\n",
