--- a/09_pytorch_model_deployment.ipynb
+++ b/09_pytorch_model_deployment.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/09_pytorch_model_deployment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/09_pytorch_model_deployment.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/09_pytorch_model_deployment.pdf) "
@@ -13,28 +15,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 09. PyTorch Model Deployment\n",
+    "# 09. PyTorch 모델 배포\n",
     "\n",
-    "Welcome to Milestone Project 3: PyTorch Model Deployment!\n",
+    "마일스톤 프로젝트 3: PyTorch 모델 배포에 오신 것을 환영합니다!\n",
     "\n",
-    "We've come a long way with our FoodVision Mini project.\n",
+    "FoodVision Mini 프로젝트로 많은 길을 왔습니다.\n",
     "\n",
-    "But so far our PyTorch models have only been accessible to us.\n",
+    "하지만 지금까지 우리의 PyTorch 모델은 우리에게만 접근 가능했습니다.\n",
     "\n",
-    "How about we bring FoodVision Mini to life and make it publically accessible?\n",
+    "FoodVision Mini를 생생하게 만들고 공개적으로 접근 가능하게 만드는 것은 어떨까요?\n",
     "\n",
-    "In other words, **we're going to deploy our FoodVision Mini model to the internet as a usable app!**\n",
+    "즉, **FoodVision Mini 모델을 사용 가능한 앱으로 인터넷에 배포할 것입니다!**\n",
     "\n",
     "<img src=\"https://github.com/mrdbourke/pytorch-deep-learning/raw/main/images/09-model-deployment-what-were-doing-demo-trimmed-cropped-small.gif\" alt=\"demo of foodvision mini computer vision model being used on a mobile device to predict on an image of sushi and getting it right\" width=900/>\n",
     "\n",
-    "*Trying out the [deployed version of FoodVision Mini](https://huggingface.co/spaces/mrdbourke/foodvision_mini) (what we're going to build) on my lunch. The model got it right too 🍣!*"
+    "*점심으로 [배포된 FoodVision Mini 버전](https://huggingface.co/spaces/mrdbourke/foodvision_mini)(우리가 구축할 것)을 시도해보고 있습니다. 모델도 맞췄습니다 🍣!*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is machine learning model deployment?\n",
+    "## 머신러닝 모델 배포란 무엇인가?\n",
     "\n",
     "**Machine learning model deployment** is the process of making your machine learning model accessible to someone or something else.\n",
     "\n",
