--- a/extras/pytorch_2_intro.ipynb
+++ b/extras/pytorch_2_intro.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/extras/pytorch_2_intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/extras/pytorch_2_intro.ipynb)"
@@ -14,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Quick PyTorch 2.0 Tutorial"
+    "# 빠른 PyTorch 2.0 튜토리얼"
    ]
   },
   {
@@ -40,9 +42,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 30-second intro\n",
+    "## 30초 소개\n",
     "\n",
-    "PyTorch 2.0 is out!\n",
+    "PyTorch 2.0이 출시되었습니다!\n",
     "\n",
     "With the main improvement being speed.\n",
     "\n",
