--- a/extras/pytorch_cheatsheet.ipynb
+++ b/extras/pytorch_cheatsheet.ipynb
@@ -5,6 +5,8 @@
    "id": "bee64cb2-8555-4239-babc-8f0d249bce19",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/extras/pytorch_cheatsheet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> "
    ]
   },
@@ -13,11 +15,11 @@
    "id": "b721b6b3-bf94-4f8f-9aae-9fa119962b1d",
    "metadata": {},
    "source": [
-    "# PyTorch Cheatsheet\n",
+    "# PyTorch 치트시트\n",
     "\n",
-    "Some of the most commonly used commands/setups in PyTorch.\n",
+    "PyTorch에서 가장 일반적으로 사용되는 명령어/설정들입니다.\n",
     "\n",
-    "> **Note:** One of the best ways to get help for PyTorch specific functions and use cases is to  search \"pytorch how to make a convolutional neural network\" or \"pytorch transformer layers\" or \"pytorch loss functions\". I do this regularly."
+    "> **참고:** PyTorch 특정 함수와 사용 사례에 대한 도움을 받는 가장 좋은 방법 중 하나는 \"pytorch how to make a convolutional neural network\" 또는 \"pytorch transformer layers\" 또는 \"pytorch loss functions\"를 검색하는 것입니다. 저는 정기적으로 이렇게 합니다."
    ]
   },
   {
@@ -25,9 +27,9 @@
    "id": "0ee9c36f-3fd9-42b8-a5b6-a5a4de1e5cdd",
    "metadata": {},
    "source": [
-    "## Imports\n",
+    "## 가져오기\n",
     "\n",
-    "You can install PyTorch on various platforms via the [PyTorch installation page](https://pytorch.org/get-started/locally/)."
+    "[PyTorch 설치 페이지](https://pytorch.org/get-started/locally/)를 통해 다양한 플랫폼에 PyTorch를 설치할 수 있습니다."
    ]
   },
   {
