--- a/extras/pytorch_most_common_errors.ipynb
+++ b/extras/pytorch_most_common_errors.ipynb
@@ -5,6 +5,8 @@
    "id": "6c62b709-eea8-4e47-b263-73a944a6fa3f",
    "metadata": {},
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/extras/pytorch_most_common_errors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
@@ -13,17 +15,17 @@
    "id": "fd5762fa-e6ff-488b-b088-3a5ca69d56a5",
    "metadata": {},
    "source": [
-    "# The Three Most Common Errors in PyTorch\n",
+    "# PyTorch에서 가장 흔한 세 가지 오류\n",
     "\n",
-    "PyTorch is one of the largest machine learning libraries available.\n",
+    "PyTorch는 사용 가능한 가장 큰 머신러닝 라이브러리 중 하나입니다.\n",
     "\n",
-    "So it's likely you'll run into various errors when using it.\n",
+    "따라서 사용할 때 다양한 오류를 만날 가능성이 높습니다.\n",
     "\n",
-    "Because of the various maintenance and checks performed by the creators, it's rare the error will be because of the library itself.\n",
+    "제작자들이 수행하는 다양한 유지보수와 검사 때문에, 라이브러리 자체로 인한 오류는 드뭅니다.\n",
     "\n",
-    "This means the majority of the errors you run into will be user errors.\n",
+    "이는 만나는 대부분의 오류가 사용자 오류라는 의미입니다.\n",
     "\n",
-    "More specifically, you wrote the wrong code.\n",
+    "더 구체적으로 말하면, 잘못된 코드를 작성했다는 것입니다.\n",
     "\n",
     "Don't be offended, this happens to every programmer.\n",
     "\n",
