--- a/going_modular/05_pytorch_going_modular_cell_mode.ipynb
+++ b/going_modular/05_pytorch_going_modular_cell_mode.ipynb
@@ -7,6 +7,8 @@
     "id": "view-in-github"
    },
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/going_modular/05_pytorch_going_modular_cell_mode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
@@ -16,19 +18,19 @@
     "id": "1M5tsObEa17-"
    },
    "source": [
-    "# 05. Going Modular: Part 1 (cell mode)\n",
+    "# 05. 모듈화하기: 1부 (셀 모드)\n",
     "\n",
-    "This notebook is part 1/2 of section [05. Going Modular](https://www.learnpytorch.io/05_pytorch_going_modular/).\n",
+    "이 노트북은 [05. 모듈화하기](https://www.learnpytorch.io/05_pytorch_going_modular/) 섹션의 1/2부입니다.\n",
     "\n",
-    "For reference, the two parts are: \n",
-    "1. [**05. Going Modular: Part 1 (cell mode)**](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/going_modular/05_pytorch_going_modular_cell_mode.ipynb) - this notebook is run as a traditional Jupyter Notebook/Google Colab notebook and is a condensed version of [notebook 04](https://www.learnpytorch.io/04_pytorch_custom_datasets/).\n",
-    "2. [**05. Going Modular: Part 2 (script mode)**](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/going_modular/05_pytorch_going_modular_script_mode.ipynb) - this notebook is the same as number 1 but with added functionality to turn each of the major sections into Python scripts, such as, `data_setup.py` and `train.py`. \n",
+    "참고로, 두 부분은 다음과 같습니다:\n",
+    "1. [**05. 모듈화하기: 1부 (셀 모드)**](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/going_modular/05_pytorch_going_modular_cell_mode.ipynb) - 이 노트북은 전통적인 Jupyter Notebook/Google Colab 노트북으로 실행되며 [노트북 04](https://www.learnpytorch.io/04_pytorch_custom_datasets/)의 압축된 버전입니다.\n",
+    "2. [**05. 모듈화하기: 2부 (스크립트 모드)**](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/going_modular/05_pytorch_going_modular_script_mode.ipynb) - 이 노트북은 1번과 동일하지만 각 주요 섹션을 `data_setup.py` 및 `train.py`와 같은 Python 스크립트로 변환하는 추가 기능이 있습니다.\n",
     "\n",
-    "Why two parts?\n",
+    "왜 두 부분인가?\n",
     "\n",
-    "Because sometimes the best way to learn something is to see how it *differs* from something else.\n",
+    "때로는 무언가를 배우는 가장 좋은 방법은 그것이 다른 것과 어떻게 *다른지* 보는 것입니다.\n",
     "\n",
-    "If you run each notebook side-by-side you'll see how they differ and that's where the key learnings are."
+    "각 노트북을 나란히 실행하면 어떻게 다른지 볼 수 있고, 그곳이 핵심 학습 지점입니다."
    ]
   },
   {
@@ -37,11 +39,11 @@
     "id": "1M5tsObEa17-"
    },
    "source": [
-    "## What is cell mode?\n",
+    "## 셀 모드란 무엇인가?\n",
     "\n",
-    "A cell mode notebook is a regular notebook run exactly how we've been running them through the course.\n",
+    "셀 모드 노트북은 코스를 통해 실행해온 것과 정확히 동일한 방식으로 실행되는 일반적인 노트북입니다.\n",
     "\n",
-    "Some cells contain text and others contain code."
+    "일부 셀은 텍스트를 포함하고 다른 셀은 코드를 포함합니다."
    ]
   },
   {
