--- a/video_notebooks/04_pytorch_custom_datasets_video.ipynb
+++ b/video_notebooks/04_pytorch_custom_datasets_video.ipynb
@@ -7,6 +7,8 @@
         "id": "view-in-github"
       },
       "source": [
+        "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+        "\n",
         "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/video_notebooks/04_pytorch_custom_datasets_video.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
@@ -16,17 +18,17 @@
         "id": "zzNUf5F4WpW-"
       },
       "source": [
-        "# 04. PyTorch Custom Datasets Video Notebook\n",
+        "# 04. PyTorch 사용자 정의 데이터셋 비디오 노트북\n",
         "\n",
-        "We've used some datasets with PyTorch before.\n",
+        "이전에 PyTorch로 일부 데이터셋을 사용해봤습니다.\n",
         "\n",
-        "But how do you get your own data into PyTorch?\n",
+        "하지만 자신의 데이터를 PyTorch로 어떻게 가져올까요?\n",
         "\n",
-        "One of the ways to do so is via: custom datasets.\n",
+        "그 방법 중 하나는 사용자 정의 데이터셋을 통하는 것입니다.\n",
         "\n",
-        "## Domain libraries\n",
+        "## 도메인 라이브러리\n",
         "\n",
-        "Depending on what you're working on, vision, text, audio, recommendation, you'll want to look into each of the PyTorch domain libraries for existing data loading functions and customizable data loading functions.\n",
+        "작업 중인 내용에 따라, 비전, 텍스트, 오디오, 추천 시스템에 따라, 기존 데이터 로딩 함수와 사용자 정의 가능한 데이터 로딩 함수를 위해 각 PyTorch 도메인 라이브러리를 살펴보고 싶을 것입니다.\n",
         "\n",
         "**Resources:**\n",
         "* Book version of the course materials for 04: https://www.learnpytorch.io/04_pytorch_custom_datasets/\n",
