--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -7,6 +7,8 @@
     "id": "view-in-github"
    },
    "source": [
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
+    "\n",
     "<a href=\"https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "[View Source Code](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb) | [View Slides](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/slides/01_pytorch_workflow.pdf) | [Watch Video Walkthrough](https://youtu.be/Z_ikDlimN6A?t=15419) "
@@ -18,17 +20,17 @@
     "id": "OgYkrRCRec0r"
    },
    "source": [
-    "# 01. PyTorch Workflow Fundamentals\n",
+    "# 01. PyTorch 워크플로우 기초\n",
     "\n",
-    "The essence of machine learning and deep learning is to take some data from the past, build an algorithm (like a neural network) to discover patterns in it and use the discovered patterns to predict the future.\n",
+    "머신러닝과 딥러닝의 본질은 과거의 데이터를 가져와서, 그 안의 패턴을 발견하기 위한 알고리즘(신경망과 같은)을 구축하고, 발견된 패턴을 사용하여 미래를 예측하는 것입니다.\n",
     "\n",
-    "There are many ways to do this and many new ways are being discovered all the time.\n",
+    "이를 수행하는 방법은 많고, 새로운 방법들이 계속 발견되고 있습니다.\n",
     "\n",
-    "But let's start small.\n",
+    "하지만 작게 시작해보겠습니다.\n",
     "\n",
-    "How about we start with a straight line?\n",
+    "직선부터 시작하는 것은 어떨까요?\n",
     "\n",
-    "And we see if we can build a PyTorch model that learns the pattern of the straight line and matches it."
+    "직선의 패턴을 학습하고 일치시키는 PyTorch 모델을 구축할 수 있는지 살펴보겠습니다."
    ]
   },
   {
@@ -37,24 +39,24 @@
     "id": "51Ug7Ug123Ip"
    },
    "source": [
-    "## What we're going to cover\n",
+    "## 다룰 내용\n",
     "\n",
-    "In this module we're going to cover a standard PyTorch workflow (it can be chopped and changed as necessary but it covers the main outline of steps).\n",
+    "이 모듈에서는 표준 PyTorch 워크플로우를 다룰 것입니다(필요에 따라 수정하고 변경할 수 있지만 주요 단계의 개요를 다룹니다).\n",
     "\n",
     "<img src=\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01_a_pytorch_workflow.png\" width=900 alt=\"a pytorch workflow flowchat\"/>\n",
     "\n",
-    "For now, we'll use this workflow to predict a simple straight line but the workflow steps can be repeated and changed depending on the problem you're working on.\n",
+    "지금은 이 워크플로우를 사용하여 간단한 직선을 예측하지만, 워크플로우 단계는 작업 중인 문제에 따라 반복되고 변경될 수 있습니다.\n",
     "\n",
-    "Specifically, we're going to cover:\n",
+    "구체적으로, 다음을 다룰 예정입니다:\n",
     "\n",
-    "| **Topic** | **Contents** |\n",
+    "| **주제** | **내용** |\n",
     "| ----- | ----- |\n",
-    "| **1. Getting data ready** | Data can be almost anything but to get started we're going to create a simple straight line |\n",
-    "| **2. Building a model** | Here we'll create a model to learn patterns in the data, we'll also choose a **loss function**, **optimizer** and build a **training loop**. | \n",
-    "| **3. Fitting the model to data (training)** | We've got data and a model, now let's let the model (try to) find patterns in the (**training**) data. |\n",
-    "| **4. Making predictions and evaluating a model (inference)** | Our model's found patterns in the data, let's compare its findings to the actual (**testing**) data. |\n",
-    "| **5. Saving and loading a model** | You may want to use your model elsewhere, or come back to it later, here we'll cover that. |\n",
-    "| **6. Putting it all together** | Let's take all of the above and combine it. |"
+    "| **1. 데이터 준비** | 데이터는 거의 모든 것이 될 수 있지만 시작하기 위해 간단한 직선을 생성할 것입니다 |\n",
+    "| **2. 모델 구축** | 여기서는 데이터의 패턴을 학습할 모델을 생성하고, **손실 함수**, **옵티마이저**를 선택하고 **훈련 루프**를 구축할 것입니다. | \n",
+    "| **3. 모델을 데이터에 맞추기 (훈련)** | 데이터와 모델이 있으니, 이제 모델이 (**훈련**) 데이터에서 패턴을 찾도록 해보겠습니다. |\n",
+    "| **4. 예측 생성 및 모델 평가 (추론)** | 모델이 데이터에서 패턴을 찾았으니, 그 결과를 실제 (**테스트**) 데이터와 비교해보겠습니다. |\n",
+    "| **5. 모델 저장 및 로드** | 모델을 다른 곳에서 사용하거나 나중에 다시 사용하고 싶을 수 있습니다. 여기서 이를 다룰 것입니다. |\n",
+    "| **6. 모든 것을 결합하기** | 위의 모든 것을 가져와서 결합해보겠습니다. |"
    ]
   },
   {
