--- a/docs/10_pytorch_profiling.ipynb
+++ b/docs/10_pytorch_profiling.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 08: PyTorch Profiling\n",
+    "> **원본:** 이 노트북은 [Daniel Bourke](https://github.com/mrdbourke)의 [Learn PyTorch for Deep Learning](https://github.com/mrdbourke/pytorch-deep-learning) 자료를 한국어로 번역한 것입니다. 원본 저장소: https://github.com/mrdbourke/pytorch-deep-learning\n",
     "\n",
-    "This notebook is an experiment to try out the PyTorch profiler.\n",
+    "# 08: PyTorch 프로파일링\n",
     "\n",
-    "See here for more:\n",
+    "이 노트북은 PyTorch 프로파일러를 시도해보는 실험입니다.\n",
+    "\n",
+    "더 자세한 내용은 여기를 참조하세요:\n",
     "* https://pytorch.org/blog/introducing-pytorch-profiler-the-new-and-improved-performance-tool/\n",
     "* https://pytorch.org/docs/stable/profiler.html"
    ]
